examples/LINUX/tests/errors/for-dangling-next.biplan

// For syntax check, the program contains a dangling next.
// Compiler should return "non matching next" error

print "Hi!"
next
stop